[project]
name = "agent-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "deepagents",
    "deepeval>=4.1.1",
    "langchain==1.3.13",
    "langchain-e2b",
    "langchain-openai>=1.3.5",
    "langgraph==1.2.9",
    "langsmith[sandbox]>=0.10.2",
    "python-dotenv>=1.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
